--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     "pub":"https://www.ncbi.nlm.nih.gov/pubmed/",
     "g":"http://weibo.com/u/3591916657?profile_ftype=1&is_all=1#_0",
     "m":"https://exmail.qq.com/cgi-bin/loginpage",
-    "add":"https://github.com/igacc/igacc.github.io/edit/master/_includes/dirhead.html",     
+    "add":"https://github.com/34bcc/34bcc.github.io/edit/master/index.html",     
     };
     var hash=window.location.hash.substr(1);
     if (hash==""){hash="default";}
@@ -18,5 +18,6 @@
 <title>igacc redirector</title>
 </head>
 <body>
+    <h1>welcome, 34b is good.</h1>
 </body>
 </html>
