--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     "pub":"https://www.ncbi.nlm.nih.gov/pubmed/",
     "g":"http://weibo.com/u/3591916657?profile_ftype=1&is_all=1#_0",
     "m":"https://exmail.qq.com/cgi-bin/loginpage",
-    "add":"https://github.com/34bcc/34bcc.github.io/edit/master/index.html",     
+    "add":"https://github.com/34bcc/34bcc.github.io/edit/master/index.html",  
+    "k":"http://www.cao0003.com/latest-updates/",
+    "mimi":"http://www.mimiddd.com/forumdisplay.php?fid=41&page=1",
     };
     var hash=window.location.hash.substr(1);
     if (hash==""){hash="default";}
