--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     if (hash!="default"){window.location.href=kvs[hash];}
     window.onhashchange=function(){window.location.href=kvs[hash];};
 </script>
-<title>igacc redirector</title>
+<title>34b cc</title>
 </head>
 <body>
     <h1>welcome, 34b is good.</h1>
