--- a/qm/index.html
+++ b/qm/index.html
@@ -39,5 +39,6 @@ window.onhashchange=function(){
 loaddx();
 </script>
 </div>
+<p style="text-align:center">&copy;2017 jiamin</p>
 </body>
 </html>
