--- a/qm/index.html
+++ b/qm/index.html
@@ -5,7 +5,7 @@
 <script src="qimen.js"></script>
 <title>QIMEN</title>
 <style type="text/css">
-body{background-color:rgb(12,16,33);color:rgb(246,246,248)}
+body{background-color:rgb(12,16,33);color:rgb(246,246,248);}
 h2 {font-weight: normal}
 h3 {font-weight: normal}
 </style>
@@ -38,7 +38,7 @@ window.onhashchange=function(){
 }
 loaddx();
 </script>
-</div>
 <p style="text-align:center">&copy;2017 jiamin</p>
+</div>
 </body>
 </html>
