--- a/qm/index.html
+++ b/qm/index.html
@@ -6,6 +6,7 @@
 <title>QIMEN</title>
 <style type="text/css">
 body{background-color:rgb(12,16,33);color:rgb(246,246,248);}
+h1 {text-align:center}
 h2 {font-weight: normal}
 h3 {font-weight: normal}
 </style>
